--- a/mytests/slides/deck2.html
+++ b/mytests/slides/deck2.html
@@ -34,7 +34,7 @@
                      data-block-id="7a2bab106e26f4754eb5eac7c42ba301">
                     <div class="sl-block-content" style="z-index: 11;">
                         <img data-natural-width="509" data-natural-height="36"
-                             data-src="mytests/images/bst_0.svg">
+                             data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944580/bst_0.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -42,7 +42,7 @@
                      data-block-id="5d528dd8628406558e13bf10f1c2841c">
                     <div class="sl-block-content" style="z-index: 12;">
                         <img data-natural-width="509" data-natural-height="92"
-                             data-src="mytests/images/bst_1.svg">
+                             data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944583/bst_1.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -50,7 +50,7 @@
                      data-block-id="065dd4a78eeddd6e0add6f6a718c0e97">
                     <div class="sl-block-content" style="z-index: 13;">
                         <img data-natural-width="376" data-natural-height="31"
-                             data-src="mytests/images/bst_2.svg">
+                             data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944584/bst_2.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -58,7 +58,7 @@
                      data-block-id="60eac2c94cc122a0cf2b1df182079a4b">
                     <div class="sl-block-content" style="z-index: 14;"><img data-natural-width="365"
                                                                             data-natural-height="38"
-                                                                            data-src="mytests/images/bst_3.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944586/bst_3.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -66,7 +66,7 @@
                      data-block-id="aacf69efda86230688c43d273cfe3378">
                     <div class="sl-block-content" style="z-index: 15;"><img data-natural-width="237"
                                                                             data-natural-height="129"
-                                                                            data-src="mytests/images/bst_4.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944587/bst_4.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -74,7 +74,7 @@
                      data-block-id="a798ea0fd094c0c9a88575bf9fbd1512">
                     <div class="sl-block-content" style="z-index: 16;"><img data-natural-width="184"
                                                                             data-natural-height="140"
-                                                                            data-src="mytests/images/bst_5.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944589/bst_5.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -82,14 +82,14 @@
                      data-block-id="fdc937e69516cf456729544ec882dc7a">
                     <div class="sl-block-content" style="z-index: 17;"><img data-natural-width="188"
                                                                             data-natural-height="28"
-                                                                            data-src="mytests/images/bst_6.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944592/bst_6.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
                      style="min-width: 30px; min-height: 30px; width: 73.2727px; height: 31px; left: 627px; top: 599px;"
                      data-block-id="f9adcde6d7f673f4b91bff1484a42af7">
                     <div class="sl-block-content" style="z-index: 18;"><img data-natural-width="52" data-natural-height="22"
-                                                                            data-src="mytests/images/bst_7.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944593/bst_7.svg">
                     </div>
                 </div>
             </section>
@@ -101,14 +101,14 @@
                      data-block-id="b149f0e64ec2dcffc703226d54daf266">
                     <div class="sl-block-content" style="z-index: 11;"><img data-natural-width="237"
                                                                             data-natural-height="129"
-                                                                            data-src="mytests/images/bst_4.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944587/bst_4.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image" style="width: 276px; height: 210px; left: 519px; top: 379px;"
                      data-block-id="c64d1c3394afd07488e7a373e6ae5200">
                     <div class="sl-block-content" style="z-index: 12;"><img data-natural-width="184"
                                                                             data-natural-height="140"
-                                                                            data-src="mytests/images/bst_5.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2944589/bst_5.svg">
                     </div>
                 </div>
 
@@ -173,7 +173,7 @@
                      data-block-id="9014005de347035e5e8be60431331916">
                     <div class="sl-block-content" style="z-index: 11;"><img data-natural-width="347"
                                                                             data-natural-height="376"
-                                                                            data-src="mytests/images/homogeneous1.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2964627/homogeneous1.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="text"
@@ -232,14 +232,14 @@
                      style="min-width: 30px; min-height: 30px; width: 88px; height: 111.746px; left: 632px; top: 257px;"
                      data-block-id="47ab0e14cd8991f23b1e8526a8da4bef">
                     <div class="sl-block-content" style="z-index: 17;"><img data-natural-width="63" data-natural-height="80"
-                                                                            data-src="mytests/images/homogeneous2.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2964645/homogeneous2.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
                      style="min-width: 30px; min-height: 30px; width: 115px; height: 46px; left: 757px; top: 280px;"
                      data-block-id="8776ef7137774fbe4196c09ee3457e01">
                     <div class="sl-block-content" style="z-index: 18;"><img data-natural-width="80" data-natural-height="32"
-                                                                            data-src="mytests/images/homogeneous3.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2964650/homogeneous3.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="text"
@@ -289,7 +289,7 @@
                      style="min-width: 30px; min-height: 30px; width: 77.76px; height: 81px; left: 557px; top: 580px;"
                      data-block-id="c5748d77276289cea5e8c3deb4753d94">
                     <div class="sl-block-content" style="z-index: 23;"><img data-natural-width="48" data-natural-height="50"
-                                                                            data-src="mytests/images/homogeneous4.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2964657/homogeneous4.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -297,7 +297,7 @@
                      data-block-id="521b4ded5dc45f524f461b3b12de770f">
                     <div class="sl-block-content" style="z-index: 24;"><img data-natural-width="134"
                                                                             data-natural-height="20"
-                                                                            data-src="mytests/images/homogeneous5.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2964658/homogeneous5.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
@@ -305,7 +305,7 @@
                      data-block-id="62a9a8c60b46c8da3f545c4e83737275">
                     <div class="sl-block-content" style="z-index: 25;"><img data-natural-width="134"
                                                                             data-natural-height="90"
-                                                                            data-src="mytests/images/homogeneous7.svg">
+                                                                            data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/548013/images/2964662/homogeneous7.svg">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="text"
